# field-miner

./: .gitignore  README.md  config.yaml  field-recording-miner-claude-code-guide.md  field-recording-miner-spec.md  pyproject.toml
field_miner/: __init__.py  analyzer.py  cache.py  cli.py  deduplicator.py  exporter.py  filter.py  ingestor.py  models.py  scorer.py
tests/: conftest.py  test_filter.py  test_scorer.py
